2004-11-30  Randolph Chung  <tausq@debian.org>

	* breakpoint.c (break_at_finish_command): Delete.
	(break_at_finish_command_1): Delete.
	(break_at_finish_at_depth_command): Delete.
	(break_at_finish_at_depth_command_1): Delete.
	(tbreak_at_finish_command): Delete.
	* hppa-tdep.c (_initialize_hppa_tdep): Remove deprecated xbreak, tbreak
	and bx commands.

2004-11-30  Andrew Cagney  <cagney@gnu.org>

	* config/nm-gnu.h: Delete file.
	* config/i386/nm-i386gnu.h: Inline "config/nm-gnu.h".

	* config/nm-sysv4.h: Delete file.
	* config/i386/nm-i386v4.h: Inline "config/nm-sysv4.h".
	* config/i386/nm-i386v42mp.h: Inline "config/nm-sysv4.h".
	* config/i386/nm-i386sol2.h: Inline "config/nm-sysv4.h".
	* config/ia64/nm-aix.h: Inline "config/nm-sysv4.h".
	* config/mips/nm-irix5.h: Inline "config/nm-sysv4.h".

2004-11-29  Andrew Cagney  <cagney@gnu.org>

	* MAINTAINERS: Add Randolph Chung (pa), Jeff Johnston (ia64), Kei
	Sakamoto (m32r), Joel Brobecker (mips), and Ulrich Weigand (s390)
	as can-commit architecture developers.
	
2004-11-29  Mark Kettenis  <kettenis@gnu.org>

	* sparc-tdep.c (X_RS1, X_SIMM13): New macros.
	(sparc32_skip_prologue): Skip instructions that store arguments in
	registers into their corresponding stack slots.

	* config/m68k/nbsdaout.mh (NAT_FILE): Set to solib.h instead of
	tm-solib.h.
	* config/m68k/obsd.mh (NAT_FILE): Likewise.

	* sparc-tdep.h (sparc32nbsd_elf_init_abi): New prototype.
	* sparcnbsd-tdep.c (sparc32nbsd_elf_init_abi): Make global.
	* sparcobsd-tdep.c (sparc32obsd_init_abi): Call
	sparc32nbsd_elf_init_abi.  Remove duplicate code.

	* config/sparc/nbsdaout.mh (NAT_FILE): Set to solib.h.
	* config/sparc/nbsdelf.mh (NAT_FILE): Remove variable.
	* config/sparc/nm-nbsd.h: Remove file.
	* config/sparc/nm-nbsdaout.h: Remove file.

	* sparc-nat.c (inf_ptrace_xfer_partial): New variable.
	(sparc_xfer_partial): New function.
	(sparc_target): Save value of to_xfer_partial from ptrace vector.
	Set to_xfer_partial.
